# album2video

./: .env.example  CLAUDE.md  README.md  pyproject.toml
src/album2video/: __main__.py  assembler.py  audio.py  cli.py  config.py  ffmpeg.py  kenburns.py  manifest.py  scanner.py  sorter.py  video_proc.py
